tests/fixtures/svs-v3/invalid/seq-zero.hex
245a0658071108036e646e0807737065633131343601031400151ac918ca16070908046e6f6465080161d209d4046553f100d6010016031b010017204d5c9d465a6479bb25129c104e5c9c6df3f528eb1f1b43972bf9dff140f42bda
